--- a/Form.css
+++ b/Form.css
@@ -46,3 +46,14 @@ body{
     margin-bottom: 10%;
 }
 
+input[type=submit]{
+    color: white;
+    background-color: black;
+    border: 2px solid red;
+    width: 30%;
+    height: 40px;
+    border-radius: 10px;
+    padding: 5px;
+    margin-top: 50%;
+    margin-left: 5%;
+}
